...
                                            </button>
                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eXe-v0-Dhq">
                                                <rect key="frame" x="54" y="671" width="276" height="50"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" name="ivpnGray14"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Create Account">
                                                    <color key="titleColor" name="ivpnLabelSecondary"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="8"/>
                                                    </userDefinedRuntimeAttribute>
...
                            </scrollView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Mxq-9C-Wgq"/>
                        <color key="backgroundColor" name="ivpnBackgroundPrimary"/>
                    </view>
                    <navigationItem key="navigationItem" title="Sign In" id="KqI-NH-rba">
                        <barButtonItem key="backBarButtonItem" title="Log In" id="2Kc-uL-g2E"/>
                        <barButtonItem key="leftBarButtonItem" title="Close" id="IM8-Ul-Szc">
                            <connections>
                                <action selector="dismissViewController:" destination="BYZ-38-t0r" id="66m-m4-9vM"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
