...
        locationLabel.text = "Please select a different entry or exit server."
        return locationLabel
    }()
    
    var actionButton: UIButton = {
        let actionButton = UIButton()
        actionButton.setTitle("CONNECT TO SERVER", for: .normal)
        actionButton.titleLabel?.font = UIFont.systemFont(ofSize: 16)
        actionButton.backgroundColor = UIColor.init(named: Theme.appPrimary)
        actionButton.layer.cornerRadius = 8
        actionButton.addTarget(self, action: #selector(connectAction), for: .touchUpInside)
        return actionButton
    }()
...
